# tcg-poke-decks

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pipeline_architecture_flow.txt  pyproject.toml
src/data/: api_helpers.py  extract_tcg_data.py  extraction_model.py  extraction_poc.ipynb  pokemon_cards.csv
src/etl_data/etl/: api_test.ipynb  pokemon_tcg_service.py  raw_tcg_extractor.py
